// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snapshots it renders anchor style correctly 1`] = `
<button
  class="btn-anchor"
  type="button"
>
  Componentry
</button>
`;

exports[`<Button /> Snapshots it renders brand color correctly 1`] = `
<button
  class="btn btn-success"
  type="button"
>
  Componentry
</button>
`;

exports[`<Button /> Snapshots it renders defaults correctly 1`] = `
<button
  class="btn"
  type="button"
>
  Componentry
</button>
`;

exports[`<Button /> Snapshots it renders large outline correctly 1`] = `
<button
  class="btn btn-outline btn-success btn-lg"
  type="button"
>
  Componentry
</button>
`;

exports[`<Button /> Snapshots it renders outline correctly 1`] = `
<button
  class="btn btn-outline btn-success"
  type="button"
>
  Componentry
</button>
`;
